argocd/infra/nextcloud-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
labels:
  pod-security.kubernetes.io/enforce=privileged
