argocd/infra/nfs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
labels:
  pod-security.kubernetes.io/enforce=privileged
