argocd/infra/ingress-argocd copy.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.projectkube.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 443
          serversTransport: default-insecure-transport@kubernetescrd
