argocd/infra/ingress-argocd.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.projectkube.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: default-insecure-transport@kubernetescrd
