argocd/infra/ingress-nextcloud.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.projectkube.com`)
      kind: Rule
      services:
        - name: nextcloud-aio-apache
          port: 442
          serversTransport: default-insecure-transport@kubernetescrd
